Update index.js for QR saerving

--- a/render.yml
+++ b/render.yml
@@ -3,7 +3,8 @@ services:
     name: whatsapp-bot
     env: node
     plan: free
-    branch: main
     buildCommand: "npm install"
-    startCommand: "npm start"
-    autoDeploy: true
+    startCommand: "node index.js"
+    envVars:
+      - key: PORT
+        value: 3000
